add jrebel plugin